--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "express": "^4.0.0",
+    "send": "^0.14.1",
     "server-components": "^0.2.1",
     "server-components-static": "^0.3.0"
   },
